--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -26,6 +26,7 @@ a {
 }
 @import "./style.scss";
 @import "./components/navbar.scss";
+@import "./components/footer.scss";
 @import "./components/banner.scss";
 @import "./components/trending.scss";
 @import "./components/product-card.scss";
