--- a/styles/components/banner.scss
+++ b/styles/components/banner.scss
@@ -1,30 +1,84 @@
-.swiper-slide .carousel-img img {
-  width: 100%;
-  height: 500px;
+.top-banner {
+  margin-top: 10px;
+  img {
+    width: 100%;
+    height: 400px;
+    display: block;
+  }
+  .swiper-slide {
+    width: 100%;
+    border: solid 1px rgb(215 216 222 / 54%);
+  }
+  .swiper-pagination-bullet {
+    height: 10px;
+    width: 10px;
+    border-radius: 5px;
+    background-clip: unset;
+    border: 0;
+    opacity: 1;
+    background-color: var(--primary-secondary);
+  }
+
+  .swiper-pagination-bullet-active {
+    background-color: var(--primary);
+    width: 35px;
+  }
+  .swiper-button-prev,
+  .swiper-button-next {
+    height: 50px;
+    width: 50px;
+    background: rgb(238, 195, 195);
+    right: 0px;
+    top: 35%;
+    left: auto;
+    transform: translateY(50%);
+    color: black;
+    border-radius: 5px;
+    opacity: 0;
+  }
+
+  &:hover .swiper-button-prev,
+  &:hover .swiper-button-next {
+    opacity: 1;
+  }
+
+  .swiper-button-prev {
+    margin-top: 30px;
+  }
+  .swiper-button-prev::after,
+  .swiper-button-next::after {
+    font-size: medium;
+  }
+  .swiper-button-prev:hover,
+  .swiper-button-next:hover {
+    background-color: rgb(207, 79, 79);
+  }
+
+  // .swiper-button-next {
+  //   background-image: url(../../assets/image/arrow-left-svgrepo-com.svg);
+  //   background-repeat: no-repeat;
+  //   background-size: 100% auto;
+  //   background-position: center;
+  // }
+
+  // .swiper-button-prev {
+  //   background-image: url(../../assets/image/arrow-right-svgrepo-com.svg);
+  //   background-repeat: no-repeat;
+  //   background-size: 100% auto;
+  //   background-position: center;
+  // }
 }
+
 /* shell section style */
-.swiper-slide {
-  width: 100%;
-  background: rgba(214, 204, 204, 0.171);
-  align-items: center;
-  justify-content: center;
-}
-
-.slider-img img {
-  width: 100%;
-}
-
-.swiper-pagination-bullet {
-  height: 10px;
-  width: 10px;
-  border-radius: 5px;
-  background-clip: unset;
-  border: 0;
-  opacity: 1;
-  background-color: var(--primary-secondary);
-}
-
-.swiper-pagination-bullet-active {
-  background-color: var(--primary);
-  width: 35px;
+.banner {
+  .banner-img {
+    img {
+      width: 100%;
+      max-height: 158px;
+    }
+  }
+  .swiper-slide {
+    width: 100%;
+    border: solid 1px rgb(215 216 222 / 54%);
+  }
 }
