--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -14,7 +14,7 @@ a {
 * {
   box-sizing: border-box;
 }
-
+*,
 :root {
   --border-color: #e0e0e0;
   --primary: #c9151b;
@@ -25,9 +25,12 @@ a {
   --dark: rgb(0, 0, 0) 7;
 }
 @import "./style.scss";
+@import "./mediaQuery.scss";
 @import "./components/navbar.scss";
 @import "./components/footer.scss";
 @import "./components/banner.scss";
 @import "./components/trending.scss";
 @import "./components/product-card.scss";
 @import "./components/product-carousel.scss";
+@import "./components/navbar-nav.scss";
+@import "./components/product-details.scss";
