--- a/styles/components/product-carousel.scss
+++ b/styles/components/product-carousel.scss
@@ -6,6 +6,7 @@
   .swiper-button-next {
     height: 45px;
     width: 45px;
+    margin-top: 0.5px;
     z-index: 10;
     transform: translateY(50%);
     color: var(--primary);
