--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -38,3 +38,4 @@ a {
 @import "./components/product-details.scss";
 @import "./components/product-vertical-slider.scss";
 @import "./components/filter-panel.scss";
+@import "./components/nestedMenu.scss";
