--- a/styles/components/profile.scss
+++ b/styles/components/profile.scss
@@ -1,3 +1,9 @@
+.menu-icon {
+  display: none;
+  width: 100%;
+  text-align: end;
+}
+
 .sidebar {
   font-family: Open Sans, Roboto, -apple-system, BlinkMacSystemFont, Segoe UI,
     Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
@@ -40,5 +46,60 @@
       border-left: 2px solid var(--primary);
       color: #d23f57;
     }
+  }
+}
+
+@media (max-width: 1200px) {
+  /* Sidebar */
+  .menu-icon {
+    display: block;
+    svg {
+      height: 30px;
+      width: 30px;
+      cursor: pointer;
+    }
+  }
+  .sidebar {
+    position: fixed;
+    top: 15%;
+    bottom: 0%;
+    left: 0;
+    padding: 58px 0 0; /* Height of navbar */
+    box-shadow: 0 2px 5px 0 rgb(0 0 0 / 5%), 0 2px 10px 0 rgb(0 0 0 / 5%);
+    width: 240px;
+    z-index: 600;
+
+    .sidebar .active {
+      border-radius: 5px;
+      box-shadow: 0 2px 5px 0 rgb(0 0 0 / 16%), 0 2px 10px 0 rgb(0 0 0 / 12%);
+    }
+
+    .sidebar-sticky {
+      position: relative;
+      top: 0;
+      height: calc(100vh - 48px);
+      padding-top: 0.5rem;
+      overflow-x: hidden;
+      overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
+    }
+  }
+}
+
+.cellWithStatus {
+  &.pending {
+    color: orange;
+    background-color: rgba(255, 166, 0, 0.137);
+  }
+  &.cancelled {
+    color: #ff2929;
+    background-color: #ffeaea;
+  }
+  &.processing {
+    color: #0c0e30;
+    background-color: #e8e8ee;
+  }
+  &.delivered {
+    color: #0b7724;
+    background-color: #e7f9ed;
   }
 }
