--- a/styles/components/navbar.scss
+++ b/styles/components/navbar.scss
@@ -44,6 +44,7 @@
   background-color: #333333;
   padding: 0px 0px;
   box-shadow: 0 4px 16px 0 rgba(0, 0, 0, 0.04);
+  z-index: 5;
 }
 
 .btn-style {
