--- a/styles/components/navbar-nav.scss
+++ b/styles/components/navbar-nav.scss
@@ -3,6 +3,8 @@
     display: none;
   }
 }
+
+/********* search-bar-style ***********/
 .search-bar {
   .nav-icon-btn {
     ul {
@@ -40,32 +42,11 @@
       }
     }
   }
-}
-
-.notification {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 10px;
-  span {
-    text-align: center;
-    background-color: orangered;
-    border-radius: 50%;
-    height: 25px;
-    width: 25px;
-    color: white;
-  }
-  strong {
-    font-size: 20px;
-    font-weight: 600;
-  }
-}
-
-.shop-card {
-  .text-head {
+  .notification {
     display: flex;
-    justify-content: space-between;
-    padding: 0px 10px;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
     span {
       text-align: center;
       background-color: orangered;
@@ -75,9 +56,76 @@
       color: white;
     }
     strong {
-      text-transform: uppercase;
-      font-size: 13px;
+      font-size: 20px;
       font-weight: 600;
+    }
+  }
+  .shop-card {
+    .text-head {
+      display: flex;
+      justify-content: space-between;
+      padding: 0px 10px;
+      span {
+        text-align: center;
+        background-color: orangered;
+        border-radius: 50%;
+        height: 25px;
+        width: 25px;
+        color: white;
+      }
+      strong {
+        text-transform: uppercase;
+        font-size: 13px;
+        font-weight: 600;
+      }
+    }
+  }
+}
+
+/********* Navbar-nav-style ***********/
+.navbar-sticky {
+  background: #333;
+  position: fixed;
+  width: 100%;
+  top: 0;
+  left: 0;
+  box-shadow: 1px 1px 1px #222;
+  animation: moveDown 0.5s ease-in-out;
+}
+
+@keyframes moveDown {
+  from {
+    transform: translateY(-5rem);
+  }
+  to {
+    transform: translateY(0rem);
+  }
+}
+
+.header-nav {
+  background-color: #333333;
+  width: 100%;
+  height: 50px;
+  box-shadow: 0 4px 16px 0 rgba(0, 0, 0, 0.04);
+  z-index: 5;
+  .nav-link {
+    text-transform: capitalize;
+    height: 50px;
+    width: 100%;
+    font-size: 15px;
+    font-weight: 600;
+    line-height: 50px;
+    white-space: nowrap;
+    color: #fff;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    &:hover {
+      color: orangered;
+    }
+    &:active {
+      color: white;
+      background-color: red;
     }
   }
 }
