--- a/styles/components/navbar.scss
+++ b/styles/components/navbar.scss
@@ -1,40 +1,3 @@
-.navbar-sticky {
-  background: #333;
-  position: fixed;
-  width: 100%;
-  top: 0;
-  left: 0;
-  box-shadow: 1px 1px 1px #222;
-  animation: moveDown 0.5s ease-in-out;
-}
-
-@keyframes moveDown {
-  from {
-    transform: translateY(-5rem);
-  }
-  to {
-    transform: translateY(0rem);
-  }
-}
-
-/********* Navbar 2 ***********/
-.navbar.navbar-2 {
-  background-color: #333333;
-  padding: 0px 0px;
-  box-shadow: 0 4px 16px 0 rgba(0, 0, 0, 0.04);
-  z-index: 5;
-}
-
-.btn-style {
-  text-transform: capitalize;
-  height: 55px;
-  width: 100%;
-  font-size: medium;
-  color: #fff;
-  display: flex;
-  align-items: center;
-}
-
 // .dropdown-menu {
 //   border: none !important;
 //   box-shadow: 0px 0px 0 rgba(0, 0, 0, 0.2), 0 -1px 5px 0 rgba(0, 0, 0, 0.19);
@@ -67,56 +30,56 @@
 //   justify-content: space-evenly;
 //   align-items: center;
 // }
-.drop-menu ul {
-  width: 260px;
-  padding: 0px 0px 0 0px;
-  line-height: 40px;
-  white-space: nowrap;
-  font-size: 18px;
-  font-weight: 600;
-}
+// .drop-menu ul {
+//   width: 260px;
+//   padding: 0px 0px 0 0px;
+//   line-height: 40px;
+//   white-space: nowrap;
+//   font-size: 18px;
+//   font-weight: 600;
+// }
 
-.drop-menu ul li {
-  cursor: pointer;
-  padding: 5px;
-  border-bottom: 1px solid var(--border-color);
-}
-.drop-menu ul li:hover {
-  background-color: var(--primary);
-  color: #fff;
-  text-decoration: none;
-}
-.navbar.navbar-2 .dropdown-box {
-  background-color: var(--primary);
-  text-transform: uppercase;
-  width: 260px;
-  padding: 2px 0px;
-  display: flex;
-  align-items: center;
-  transition: all 0.3s ease 0s;
-}
+// .drop-menu ul li {
+//   cursor: pointer;
+//   padding: 5px;
+//   border-bottom: 1px solid var(--border-color);
+// }
+// .drop-menu ul li:hover {
+//   background-color: var(--primary);
+//   color: #fff;
+//   text-decoration: none;
+// }
+// .navbar.navbar-2 .dropdown-box {
+//   background-color: var(--primary);
+//   text-transform: uppercase;
+//   width: 260px;
+//   padding: 2px 0px;
+//   display: flex;
+//   align-items: center;
+//   transition: all 0.3s ease 0s;
+// }
 
-.navbar.navbar-2 .dropdown span.nav-link {
-  color: var(--white) !important;
-}
+// .navbar.navbar-2 .dropdown span.nav-link {
+//   color: var(--white) !important;
+// }
 
-.navbar.navbar-2 .navbar-nav-1 .nav-link {
-  font-weight: 600;
-}
+// .navbar.navbar-2 .navbar-nav-1 .nav-link {
+//   font-weight: 600;
+// }
 
-.navbar.navbar-2 .nav-link {
-  color: var(--white) !important;
-  font-size: 15px;
-  margin-right: 10px;
-}
+// .navbar.navbar-2 .nav-link {
+//   color: var(--white) !important;
+//   font-size: 15px;
+//   margin-right: 10px;
+// }
 
-.navbar.navbar-2 .nav-link:hover {
-  color: #bdbdbd !important;
-}
+// .navbar.navbar-2 .nav-link:hover {
+//   color: #bdbdbd !important;
+// }
 
-.dropdown-toggle::after {
-  display: none;
-}
+// .dropdown-toggle::after {
+//   display: none;
+// }
 
 // .notification_cart {
 //   position: absolute;
@@ -158,24 +121,24 @@
 //   width: 100%;
 // }
 
-.card svg {
-  width: 100px !important;
-  height: 50px;
-  color: rgba(165, 131, 18, 0.678);
-}
-.navbar_items {
-  border: none !important;
-  box-shadow: 0px 0px 0 rgba(0, 0, 0, 0.2), 0 -1px 5px 0 rgba(0, 0, 0, 0.19);
-  border-radius: 0px;
-  margin: 0px;
-  padding-top: 0px;
-  padding-bottom: 0px;
-  transition: 0.3s;
-}
+// .card svg {
+//   width: 100px !important;
+//   height: 50px;
+//   color: rgba(165, 131, 18, 0.678);
+// }
+// .navbar_items {
+//   border: none !important;
+//   box-shadow: 0px 0px 0 rgba(0, 0, 0, 0.2), 0 -1px 5px 0 rgba(0, 0, 0, 0.19);
+//   border-radius: 0px;
+//   margin: 0px;
+//   padding-top: 0px;
+//   padding-bottom: 0px;
+//   transition: 0.3s;
+// }
 
-.navbar_items svg {
-  color: #f1f1f185;
-}
+// .navbar_items svg {
+//   color: #f1f1f185;
+// }
 // .dropdown-item {
 //   font-size: 15px;
 //   border-bottom: 1px solid var(--border-color);
