--- a/styles/components/nestedMenu.scss
+++ b/styles/components/nestedMenu.scss
@@ -8,7 +8,7 @@
     background-color: var(--primary);
     text-transform: uppercase;
     width: 260px;
-    padding: 15px 0px;
+    height: 50px;
     display: flex;
     align-items: center;
     transition: all 0.3s ease 0s;
