create nextjs server

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -44,3 +44,4 @@ a {
 @import "./components/filter-panel.scss";
 @import "./components/nestedMenu.scss";
 @import "./components/checkout.scss";
+@import "./components/order.scss";
