update user api

--- a/styles/components/order.scss
+++ b/styles/components/order.scss
@@ -111,6 +111,7 @@
   min-height: 350px;
 }
 .order-info {
+  background-color: white;
   padding: 20px;
   margin-bottom: 20px;
   border-radius: 5px;
